--- a/members/templates/members/member_list.html
+++ b/members/templates/members/member_list.html
@@ -17,7 +17,7 @@
         {% for member in member_list %}
           <tr>
             <td>{{ member.id }}</td>
-            <td>{{ member.name }}</td>
+            <td>{{ member.username }}</td>
             <td>{{ member.city }}</td>
             <td>{{ member.street }}</td>
             <td>{{ member.zipcode }}</td>
