--- a/items/templates/items/item_form.html
+++ b/items/templates/items/item_form.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        {% include '_form.html' with form_title='회원가입' submit_label='회원가입' %}
+        {% include '_form.html' with form_title='상품 등록' submit_label='제출' %}
       </div>
     </div>
   </div>
