--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+      {{ message }}
+    </div>
+  {% endfor %}
+{% endif %}
 <div class="container">
   <div class="header">
     <ul class="nav nav-pills pull-right">
@@ -33,5 +40,9 @@
 {#<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"#}
 {#        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"#}
 {#        crossorigin="anonymous"></script>#}
+
+{% block script %}
+{% endblock %}
+
 </body>
 </html>
