검색 기능 및 화면 개발

--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -3,6 +3,9 @@
 {% block content %}
   <div class="container">
     <div>
+      <div>
+        {% include '_get_form.html' with form_title='검색' submit_label='검색' form_method="GET" %}
+      </div>
       <table class="table table-striped">
         <thead>
         <tr>
