template에서 일어나는 order_item쿼리를 model의 프로퍼티로 이동 후 반복 쿼리 62 -> 3개로 감소

--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -24,9 +24,9 @@
           <tr>
             <td>{{ order.id }}</td>
             <td>{{ order.member }}</td>
-            <td>{{ order.orderitem_set.first.item }}</td>
-            <td>{{ order.orderitem_set.first.order_price }}</td>
-            <td>{{ order.orderitem_set.first.count }}</td>
+            <td>{{ order.orderitem_set.first_order_item.item }}</td>
+            <td>{{ order.orderitem_set.first_order_item.order_price }}</td>
+            <td>{{ order.orderitem_set.first_order_item.count }}</td>
             <td>{{ order.status_str }}</td>
             <td>{{ order.order_date }}</td>
             <td>
